--- a/css/mod_hero.scss
+++ b/css/mod_hero.scss
@@ -1,45 +1,41 @@
+// @Author: SPEDI srl
+// @Date:   19-01-2018
+// @Email:  sviluppo@spedi.it
+// @Last modified by:   SPEDI srl
+// @Last modified time: 19-01-2018
+// @License: GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
+// @Copyright: Copyright (C) SPEDI srl
+
 .hero{
   width: 100%;
-  height: 400px;
+  // height: 400px;
   background-position: center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
   background-size: cover;
   // background-attachment: fixed;
   position: relative;
 
-  &__caption{
-    position: absolute;
-    z-index: 999;
-    left: 0;
-    top: 50px;
-    max-width: 600px;
-    background-color: rgba(#ffffff, 0.7);
-    -webkit-box-shadow: 10px 10px 35px -8px rgba(0,0,0,0.75);
-    -moz-box-shadow: 10px 10px 35px -8px rgba(0,0,0,0.75);
-    box-shadow: 10px 10px 35px -8px rgba(0,0,0,0.75);
-    transition: all 0.5s ease-in-out;
+  .hero-caption{
+    position: relative;
+    z-index: 1;
+    padding-left: 400px;
+    padding-right: 400px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    @media (max-width:1400px){
+      padding-left: 200px;
+      padding-right: 200px;
+    }
+    @media (max-width:1100px){
+      padding-left: 100px;
+      padding-right: 100px;
+    }
     @media (max-width:768px){
-      position: relative;
-      left: auto;
-      top: auto;
+      padding-left: 20px;
+      padding-right: 20px;
     }
-    h3{
-      font-weight: bold;
-    }
-
-    &:hover{
-      background-color: rgba(#ffffff, 1);
-      transition: all 0.5s ease-in-out;
-    }
-  }
-
-  @media (max-width:768px){
-    height: auto !important;
-    // height: 300px !important;
-    > .container{
-      padding: 50px 0 30px 0;
+    p{
+      color: #fff;
+      margin-bottom: 1px;
     }
   }
 }
